// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Pruebas sobre componente GifGrid debe de mostrar item cuando se cargan imagenes useFecthGifs 1`] = `
<Fragment>
  <h3
    className="animate__animated animate__fadeIn"
  >
     
    ninjas
     
  </h3>
  <div
    className="card-grid"
  >
    <GifGridItem
      id="ACB"
      key="ACB"
      title="anything"
      url="http"
    />
  </div>
</Fragment>
`;

exports[`Pruebas sobre componente GifGrid debe hacer un match con el snapshot 1`] = `
<Fragment>
  <h3
    className="animate__animated animate__fadeIn"
  >
     
    ninjas
     
  </h3>
  <p
    className="animate__animated animate__flash"
  >
    Loading
  </p>
  <div
    className="card-grid"
  />
</Fragment>
`;
